added low energy limits

--- a/unified_biquaternion_theory/ubt_main_article.tex
+++ b/unified_biquaternion_theory/ubt_main_article.tex
@@ -136,6 +136,27 @@ The interaction term in the unified Lagrangian:
 \]
 ensures that the dynamics of \(\Theta\) is fully coupled to the standard model gauge fields.
 
+:\section{Low-Energy Limits: Dirac and Schrödinger Equations}
+
+To demonstrate compatibility with established quantum mechanics, we derive the Dirac and Schrödinger equations as limiting cases of the unified biquaternionic field equation for \(\Theta(q)\).
+
+Starting from the unified covariant derivative:
+\[
+\mathcal{D}_A \Theta = \partial_A \Theta + \Omega_A \cdot \Theta + i g A_A^a T^a \Theta,
+\]
+we consider the case where curvature effects are small, gauge fields are static or slowly varying, and the manifold \(\mathbb{C}^5\) can be approximated by a local inertial frame. In this approximation, the equation of motion simplifies to:
+\[
+\Gamma^A \partial_A \Theta = m \Theta,
+\]
+which reduces to the **Dirac equation** in the limit where only 4 spacetime dimensions are active and \(\Gamma^A\) matrices correspond to standard Dirac matrices \(\gamma^\mu\). This confirms that the spinor nature of \(\Theta\) is consistent with relativistic quantum field theory.
+
+In the non-relativistic limit (\(v \ll c\)), a standard Foldy–Wouthuysen decomposition leads to the Schrödinger equation:
+\[
+i \hbar \frac{\partial \psi}{\partial t} = \left( -\frac{\hbar^2}{2m} \nabla^2 + V \right) \psi,
+\]
+where \(\psi\) is a projection of \(\Theta\) onto low-energy modes.
+
+Thus, our unified theory contains both quantum mechanics and relativistic field theory as natural limits, while offering a richer structure due to its biquaternionic and spin-tensor form defined on \(\mathbb{C}^5\).
 
 \section{Conscious Oscillations and Emergent Mind}
 
