--- a/unified_biquaternion_theory/ubt_article_2_derivations.tex
+++ b/unified_biquaternion_theory/ubt_article_2_derivations.tex
@@ -1,4 +1,3 @@
-
 \documentclass[12pt]{article}
 \usepackage{amsmath,amssymb,amsfonts,graphicx,hyperref,geometry}
 \geometry{margin=1in}
@@ -53,7 +52,8 @@ This structure admits a preonic interpretation, where bound states of \( \Theta 
 To resolve criticisms regarding lack of predictive power:
 
 \begin{itemize}
-  \item In the low-energy limit \( \psi \rightarrow 0 \), \( \Gamma^A \rightarrow \gamma^\mu \), we recover the Dirac equation.
+  \item In the low-energy limit \( \psi \rightarrow 0 \), \( \Gamma^A \rightarrow \gamma^\mu \), we recover the Dirac equation:
+  \[ i \gamma^\mu \partial_\mu \psi - m \psi = 0. \]
   \item The scalar potential \( V \) is expanded around vacuum expectation values to yield Yukawa couplings, giving rise to mass terms for leptons and quarks.
   \item Gauge couplings \( g_1, g_2, g_3 \) emerge from the curvature of \( \mathbb{C}^5 \) via background field configurations.
   \item Mixing angles and symmetry breaking patterns (Higgs mechanism analogs) can be encoded in \( V(\Theta) \).
@@ -64,16 +64,41 @@ We introduce a complex drift field \( D^A(q) \) and a probability density \( \rh
 \[ \frac{\partial \rho}{\partial \tau} = -\partial_A ( D^A \rho ) + \frac{1}{2} \partial_A \partial_B (D^{AB} \rho), \]
 where \( \tau \in \mathbb{C} \) is complex time.
 
-Drift is related to conscious selection of trajectory branches, and MetaTime (formerly MetaCAS) is defined as:
+Drift is related to conscious selection of trajectory branches, and Metatime Action State (MAS) is defined as:
 \[ \mathcal{M} = \int d^5q\, \psi(q) \bar{\Theta}(q) \Theta(q). \]
 
-\section{Particle Mass Spectrum and Fine-Structure Constant}
-The scalar potential \( V \) is engineered to reproduce mass hierarchy. The fine-structure constant \( \alpha \) emerges from U(1) holonomy over \( \psi \)-dimension:
+\section{Particle Mass Spectrum and Physical Predictions}
+The scalar potential \( V \) is engineered to reproduce mass hierarchy by minimizing action subject to internal symmetry constraints:
+\[ m_f \sim \langle \bar{\Theta} \Theta \rangle_f \rightarrow \text{fermion mass} \quad \text{for}\ f = e, \mu, \tau, u, d, s, ... \]
+
+Coupling constants and structure constants in \( F_{AB}^a \) determine the strengths of interactions, derived from the geometry of the internal fibre bundle.
+
+\subsection{Emergence of the Fine-Structure Constant \texorpdfstring{\( \alpha \)}{alpha}}
+
+The fine-structure constant \( \alpha \approx \frac{1}{137.036} \) characterizes the strength of the electromagnetic interaction and appears as a dimensionless ratio:
 \[
-\alpha = \frac{g_1^2}{4\pi} = \frac{n^2 \Phi^2}{4\pi}, \quad \text{where } \Phi \text{ is geometric phase.}
+\alpha = \frac{e^2}{4\pi \varepsilon_0 \hbar c}.
+\]
+In natural units where \( \hbar = c = \varepsilon_0 = 1 \), this simplifies to:
+\[
+\alpha = \frac{e^2}{4\pi}.
 \]
 
+In the context of the Unified Biquaternion Theory, we propose that \( \alpha \) emerges from a topological quantization condition associated with the U(1) gauge field over the compactified complex phase dimension \( \psi \in \mathbb{C} \subset \mathbb{C}^5 \). We postulate that the U(1) gauge bundle has a non-trivial holonomy over the phase fiber \( S^1_\psi \), leading to a quantized flux:
+\[
+\oint_{S^1_\psi} B_\psi\, d\psi = 2\pi n g_1,
+\]
+where \( n \in \mathbb{Z} \), and \( g_1 \) is the U(1) coupling emerging from the geometry.
+
+Identifying \( g_1^2 / (4\pi) \equiv \alpha \), the quantized winding structure of the gauge connection implies that \( \alpha^{-1} \in \mathbb{Q} \), consistent with the observed approximate rational value. The internal geometry of \( \mathbb{C}^5 \), in particular its curvature and complex structure in the \( \psi \) direction, imposes constraints on the allowed values of \( g_1 \), leading to:
+\[
+\alpha = \frac{g_1^2}{4\pi} = \frac{n^2 \Phi^2}{4\pi},
+\]
+where \( \Phi \) is the geometric phase accumulated along \( S^1_\psi \). A natural value \( n = 1 \), \( \Phi \sim 0.3 \) yields \( \alpha^{-1} \sim 137 \), supporting the hypothesis that electromagnetic coupling is geometric in origin.
+
+This geometric emergence provides a testable prediction of the theory: variations in \( \psi \)-fiber curvature could lead to small corrections in \( \alpha \), possibly observable as running of the electromagnetic coupling at high energies or under exotic topological configurations.
+
 \section{Conclusion}
-This expanded treatment grounds the Unified Biquaternion Theory in predictive geometry, resolves previous objections, and provides testable consequences.
+This work expands the Unified Biquaternion Theory by grounding it in derivable mathematics, showing connections to the Standard Model, and proposing pathways for deriving fundamental parameters from field dynamics. It also refines the role of \( \Theta \) in the emergence of physical and conscious structures.
 
 \end{document}
