--- a/unified_biquaternion_theory/ubt_article_2_derivations.tex
+++ b/unified_biquaternion_theory/ubt_article_2_derivations.tex
@@ -51,7 +51,6 @@ This structure admits a preonic interpretation, where bound states of \( \Theta 
 
 \section{Derivation of Standard Model Limits and Couplings}
 To resolve criticisms regarding lack of predictive power:
-
 \begin{itemize}
   \item In the low-energy limit \( \psi \rightarrow 0 \), \( \Gamma^A \rightarrow \gamma^\mu \), we recover the Dirac equation:
   \[ i \gamma^\mu \partial_\mu \psi - m \psi = 0. \]
@@ -60,43 +59,27 @@ To resolve criticisms regarding lack of predictive power:
   \item Mixing angles and symmetry breaking patterns (Higgs mechanism analogs) can be encoded in \( V(\Theta) \).
 \end{itemize}
 
-\section{Fokker--Planck Equation and Conscious Drift}
-We introduce a complex drift field \( D^A(q) \) and a probability density \( \rho(q,\tau) = \bar{\Theta} \Theta \). The dynamics follow:
-\[ \frac{\partial \rho}{\partial \tau} = -\partial_A ( D^A \rho ) + \frac{1}{2} \partial_A \partial_B (D^{AB} \rho), \]
-where \( \tau \in \mathbb{C} \) is complex time.
+\section{Extended Derivations and Predictions}
+\subsection{Constants \( \hbar, c, G \)}
+We postulate that \( \hbar, c \) and \( G \) arise as geometric quantities. Planck’s constant \( \hbar \) is associated with quantized flux over compactified phase dimensions, \( c \) with the scale of lightlike propagation in \( \mathbb{C}^5 \), and \( G \) with torsion in the spin connection.
 
-Drift is related to conscious selection of trajectory branches, and Metatime Action State (MAS) is defined as:
-\[ \mathcal{M} = \int d^5q\, \psi(q) \bar{\Theta}(q) \Theta(q). \]
-
-\section{Extended Derivations}
-
-\subsection{Derivation of \( \hbar \), \( c \), and \( G \)}
-We postulate that these constants emerge as geometric parameters in the moduli space of \( \mathbb{C}^5 \). The scaling of time and space-like coordinates defines \( c \), phase quantization under modular transformations fixes \( \hbar \), and the curvature of the spin connection contributes an effective Newtonian coupling \( G \) from the torsion sector.
-
-\subsection{Lagrangian with Higgs Coupling}
-Introducing a scalar doublet \( H \), the Higgs-Theta coupling reads:
+\subsection{Fine Structure Constant}
 \[
-\mathcal{L}_\text{Yukawa} = y_f \bar{\Theta}_L H \Theta_R + h.c.
-\]
-Spontaneous symmetry breaking gives mass to fermions and gauge bosons, consistent with low-energy SM.
-
-\subsection{Mass Matrix Construction}
-Let \( \Theta \) have distinct internal components labeled by flavor and generation. Mass matrices \( M_f \) are derived from effective vevs:
-\[
-M_f = y_f \langle H \rangle.
+\alpha = \frac{g_1^2}{4\pi} = \frac{n^2 \Phi^2}{4\pi}, \quad \Phi \sim 0.3, \ n=1 \Rightarrow \alpha^{-1} \sim 137.
 \]
 
-\subsection{Derivation of Dirac and Schrödinger Equations}
-In flat background and phase-independent configuration, the Dirac equation follows:
+\subsection{Dirac and Schrödinger Equations}
+In the appropriate limit:
 \[
-i \gamma^\mu \partial_\mu \psi = m \psi.
+i \gamma^\mu \partial_\mu \psi = m \psi, \quad i \hbar \partial_t \psi = -\frac{\hbar^2}{2m} \nabla^2 \psi + V \psi.
 \]
-Taking the non-relativistic limit yields Schrödinger's equation:
+
+\subsection{Yukawa Coupling and Higgs Mechanism}
 \[
-i \hbar \frac{\partial \psi}{\partial t} = -\frac{\hbar^2}{2m} \nabla^2 \psi + V \psi.
+\mathcal{L}_\text{Yukawa} = y_f \bar{\Theta}_L H \Theta_R + h.c., \quad M_f = y_f \langle H \rangle
 \]
 
 \section{Conclusion}
-This work expands the Unified Biquaternion Theory by grounding it in derivable mathematics, showing connections to the Standard Model, proposing derivations for fundamental constants, and refining the role of \( \Theta \) in the emergence of physical and conscious structures.
+This extended article strengthens the mathematical basis of UBT, provides derivations of fundamental physical equations and constants, and connects to the Standard Model. It addresses prior critiques by embedding known physics within the biquaternionic and geometric framework.
 
 \end{document}
