--- a/unified_biquaternion_theory/ubt_article_2_derivations.tex
+++ b/unified_biquaternion_theory/ubt_article_2_derivations.tex
@@ -1,9 +1,13 @@
 
 \documentclass[12pt]{article}
-\usepackage{amsmath,amssymb,amsfonts,graphicx,hyperref,geometry}
+\usepackage{amsmath,amssymb,amsfonts}
+\usepackage{geometry}
+\usepackage{hyperref}
+\usepackage{graphicx}
+\usepackage{authblk}
 \geometry{margin=1in}
-\title{Mathematical Foundations and Physical Predictions of the Unified Biquaternion Theory}
-\author{DavJ}
+\title{A Unified Field Theory on the Biquaternionic Manifold \( \mathbb{B}^4 \): Consciousness, Quantum Fields, and Emergent Space-Time}
+\author{David Jaroš}
 \date{2025}
 
 \begin{document}
@@ -11,75 +15,304 @@
 \maketitle
 
 \begin{abstract}
-This article elaborates on the Unified Biquaternion Theory (UBT) introduced in the companion paper, aiming to provide a rigorous mathematical foundation and derive physical predictions from first principles. We construct the theory on a five-complex-dimensional space \( \mathbb{C}^5 \), where the field \( \Theta(q) \in \mathbb{C}^{4 \times 4} \) transforms as a spinor-valued matrix field under both spacetime and internal gauge symmetries. We derive the metric tensor from bilinear invariants, construct the covariant derivative with full Standard Model gauge embedding, quantize the field canonically, and show how classical limits reduce to known physical laws. We discuss how matter properties, including particle masses and gauge couplings, could emerge naturally from the dynamics of the \( \Theta \)-field.
+We develop a mathematically consistent unified field theory constructed on a four-dimensional biquaternionic manifold \( \mathbb{B}^4 \), which incorporates complexified spacetime and internal phase dimensions naturally into its geometric structure. The core field \( \Theta(q) \) is a tensor-spinor-gauge-valued section over \( \mathbb{B}^4 \), encoding all known fundamental interactions, emergent quantum behavior, and phenomenology of consciousness. The theory eliminates the need for external projections ...
+
+We develop a rigorous unified field theory on a four-dimensional biquaternionic manifold \( \mathbb{B}^4 = (\mathbb{C} \otimes \mathbb{H})^4 \), where each coordinate is a biquaternion representing complexified internal and external degrees of freedom. The primary field \( \Theta(q) \) is a tensor-spinor-valued section over \( \mathbb{B}^4 \), encoding gravitational, gauge, quantum, and cognitive structure. We formulate the covariant dynamics, metric geometry, low-energy quantum limits, emergent conscious par...
 \end{abstract}
 
-\section{Geometric Structure and Field Definitions}
-We consider a fundamental spinor-valued matrix field \( \Theta(q) \in \mathbb{C}^{4 \times 4} \) defined over a complexified configuration space \( q \in \mathbb{C}^5 \), where coordinates are labeled \( q^A = (q^\mu, \psi) \), with \( \mu=0,1,2,3 \), and \( \psi \) a complex phase variable associated with conscious drift.
+\section{Biquaternionic Manifold and Field Definition}
 
-Rather than projecting back to spacetime via \( \pi(q) \), we define observables via bilinear expressions:
-\[ O^\mu(q) = \bar{\Theta}(q) \Gamma^\mu \Theta(q), \quad S(q) = \bar{\Theta}(q) \Theta(q). \]
-The physical spacetime metric emerges from:
-\[ g_{\mu\nu}(q) = \Re\left[ \bar{\Theta} \Gamma_{(\mu} \mathcal{D}_{\nu)} \Theta \right], \]
-where \( \mathcal{D}_\mu \) is the full covariant derivative on \( \mathbb{C}^5 \).
-
-\section{Covariant Derivative and Internal Gauge Symmetries}
-We construct the covariant derivative as:
+We define the manifold \( \mathcal{M} = \mathbb{B}^4 \), where each point is a 4-tuple of biquaternions:
 \[
-\mathcal{D}_A \Theta = \partial_A \Theta + \Omega_A \cdot \Theta + i g_1 B_A Y \Theta + i g_2 W_A^i \tau^i \Theta + i g_3 G_A^a \lambda^a \Theta,
+q^\mu = x^\mu + i y^\mu + \mathbf{j} z^\mu + i \mathbf{j} w^\mu, \quad \mu = 0,1,2,3,
 \]
-where \( \Omega_A \) is the spin connection and the gauge fields correspond to the Standard Model gauge group \( U(1) \times SU(2) \times SU(3) \).
+with components \( x^\mu, y^\mu, z^\mu, w^\mu \in \mathbb{R} \). The basis elements \( \{1, \mathbf{i}, \mathbf{j}, \mathbf{k}\} \) satisfy the quaternionic algebra.
 
-This structure ensures that \( \Theta(q) \) couples minimally to all gauge bosons and gravity via the unified geometric framework.
+The unified field is defined as:
+\[
+\Theta(q) \in \Gamma \left( T^{(1,1)}(\mathbb{B}^4) \otimes \mathbb{S} \otimes \mathbb{G} \right),
+\]
+where \( T^{(1,1)} \) denotes the (1,1) tensor bundle over \( \mathbb{B}^4 \), \( \mathbb{S} \) is a spinor bundle, and \( \mathbb{G} \) is an internal gauge fiber.
 
+\section{Metric Geometry and Covariant Derivatives}
+
+We define a complexified metric tensor on \( \mathbb{B}^4 \):
+\[
+G_{\mu\nu}(q) = \langle dq^\mu, dq^\nu \rangle,
+\]
+where \( \langle \cdot, \cdot \rangle \) is a biquaternionic inner product. The affine and spin connections \( \Gamma^\rho_{\mu\nu} \), \( \Omega_\mu \) are derived accordingly.
+
+Covariant derivative:
+\[
+\mathcal{D}_\mu \Theta = \partial_\mu \Theta + \Omega_\mu \cdot \Theta + i g A_\mu^a T^a \Theta,
+\]
+with gauge coupling and spin connection terms included.
+
+
+\section{General Relativity and Emergent Geometry}
+
+The metric tensor \( G_{\mu\nu}(q) \) defined over \( \mathbb{B}^4 \) generalizes the Lorentzian metric of General Relativity to a biquaternionic setting. The curvature tensors are constructed from the complexified affine connection:
+\[
+R^\rho_{\ \sigma\mu\nu} = \partial_\mu \Gamma^\rho_{\nu\sigma} - \partial_\nu \Gamma^\rho_{\mu\sigma} + \Gamma^\rho_{\mu\lambda} \Gamma^\lambda_{\nu\sigma} - \Gamma^\rho_{\nu\lambda} \Gamma^\lambda_{\mu\sigma}.
+\]
+The Einstein field equations emerge as a projection of the variation of the geometric Lagrangian:
+\[
+\delta \mathcal{L}_{\text{geom}} = \frac{1}{2\kappa} \left( R_{\mu\nu} - \frac{1}{2} G_{\mu\nu} R \right) \delta G^{\mu\nu}.
+\]
+This shows that classical spacetime curvature is a low-energy limit of the intrinsic geometry of the biquaternionic manifold. The extended degrees of freedom in \( y^\mu, z^\mu \) give rise to higher-order corrections and dynamical compactification in early-universe cosmology.
 \section{Lagrangian and Field Equations}
-The full Lagrangian reads:
+
+Total action on \( \mathbb{B}^4 \) reads:
 \[
-\mathcal{L} = \Re \left[ \bar{\Theta} i \Gamma^A \mathcal{D}_A \Theta \right] - V(\bar{\Theta}, \Theta) - \frac{1}{4} \sum_a F^a_{AB} F^{aAB},
+S = \int_{\mathbb{B}^4} d^4q \, \sqrt{|\det G|} \left( \mathcal{L}_{\Theta} + \mathcal{L}_{\text{geom}} + \mathcal{L}_{\text{gauge}} \right),
 \]
-where \( V \) is a scalar potential breaking degeneracy among internal states and driving phase transitions.
-
-The equations of motion derived from \( \delta S = 0 \) give:
+where:
 \[
-\Gamma^A \mathcal{D}_A \Theta + \frac{\partial V}{\partial \bar{\Theta}} = 0.
+\mathcal{L}_{\Theta} = \Re\left[ \bar{\Theta} \left( i \Gamma^\mu \mathcal{D}_\mu - M(q) \right) \Theta \right],
 \]
+with \( M(q) \) potentially depending on internal phase coordinates \( y^\mu, z^\mu \), representing cognitive or entropic symmetry breaking.
 
-\section{Quantization and Spinor Interpretation}
-We quantize \( \Theta_{\alpha\beta}(q) \) canonically with anti-commutation relations:
-\[ \{ \Theta_{\alpha\beta}(q), \bar{\Theta}_{\gamma\delta}(q') \} = \delta^5(q-q') \delta_{\alpha\gamma} \delta_{\beta\delta}. \]
-This structure admits a preonic interpretation, where bound states of \( \Theta \) give rise to fermions with correct quantum numbers.
+\section{Tensor Decomposition of \(\Theta\)}
 
-\section{Derivation of Standard Model Limits and Couplings}
-To resolve criticisms regarding lack of predictive power:
+The field can be locally decomposed as:
+\[
+\Theta(q) = \phi(q) + i \psi^\mu(q) \gamma_\mu + \eta(q) \mathbb{I} + i \chi(q) \mathbb{J},
+\]
+where \( \chi(q) \) represents internal oscillations related to consciousness and subjective time.
+
+\section{Quantum Limits and Classical Reductions}
+
+In the real spacetime limit \( y^\mu, z^\mu, w^\mu \to 0 \), the action reduces to:
 \begin{itemize}
-  \item In the low-energy limit \( \psi \rightarrow 0 \), \( \Gamma^A \rightarrow \gamma^\mu \), we recover the Dirac equation:
-  \[ i \gamma^\mu \partial_\mu \psi - m \psi = 0. \]
-  \item The scalar potential \( V \) is expanded around vacuum expectation values to yield Yukawa couplings, giving rise to mass terms for leptons and quarks.
-  \item Gauge couplings \( g_1, g_2, g_3 \) emerge from the curvature of \( \mathbb{C}^5 \) via background field configurations.
-  \item Mixing angles and symmetry breaking patterns (Higgs mechanism analogs) can be encoded in \( V(\Theta) \).
+  \item Dirac equation for spinor sector:
+  \[
+  (i \gamma^\mu \partial_\mu - m) \psi = 0,
+  \]
+  \item Schrödinger equation in nonrelativistic limit:
+  \[
+  i \hbar \partial_t \psi = \left( -\frac{\hbar^2}{2m} \nabla^2 + V \right) \psi,
+  \]
+  \item Effective quantum field theory in flat \( \mathbb{R}^4 \subset \mathbb{B}^4 \).
 \end{itemize}
 
-\section{Extended Derivations and Predictions}
-\subsection{Constants \( \hbar, c, G \)}
-We postulate that \( \hbar, c \) and \( G \) arise as geometric quantities. Planck’s constant \( \hbar \) is associated with quantized flux over compactified phase dimensions, \( c \) with the scale of lightlike propagation in \( \mathbb{C}^5 \), and \( G \) with torsion in the spin connection.
 
-\subsection{Fine Structure Constant}
-\[
-\alpha = \frac{g_1^2}{4\pi} = \frac{n^2 \Phi^2}{4\pi}, \quad \Phi \sim 0.3, \ n=1 \Rightarrow \alpha^{-1} \sim 137.
-\]
+\section{Gauge Theory and Standard Model Embedding}
 
-\subsection{Dirac and Schrödinger Equations}
-In the appropriate limit:
+The internal gauge structure of \( \Theta \) accommodates:
 \[
-i \gamma^\mu \partial_\mu \psi = m \psi, \quad i \hbar \partial_t \psi = -\frac{\hbar^2}{2m} \nabla^2 \psi + V \psi.
+\mathbb{G} \cong SU(3) \times SU(2) \times U(1),
 \]
+and the covariant derivative generalizes to the Yang-Mills form. Higgs-like mass terms can arise via internal symmetry oscillations in the \( z^\mu, w^\mu \) directions.
 
-\subsection{Yukawa Coupling and Higgs Mechanism}
+\section{Gauge Symmetries: QED, QCD and the Standard Model Embedding}
+
+We extend the field \(\Theta(q)\) to carry internal gauge indices under the symmetry group \( \mathcal{G} = U(1) \times SU(2) \times SU(3) \), corresponding to the Standard Model gauge groups for electromagnetism, weak, and strong interactions.
+
+Let \(A_\mu = A_\mu^a T^a\) denote the full gauge connection, with generators \(T^a\) acting on \(\Theta(q)\) in the appropriate internal representation.
+
+The full covariant derivative becomes:
 \[
-\mathcal{L}_\text{Yukawa} = y_f \bar{\Theta}_L H \Theta_R + h.c., \quad M_f = y_f \langle H \rangle
+\mathcal{D}_\mu \Theta = \partial_\mu \Theta + \Omega_\mu \cdot \Theta + i g_1 B_\mu Y \Theta + i g_2 W_\mu^i \tau^i \Theta + i g_3 G_\mu^a \lambda^a \Theta,
 \]
+where:
+- \(B_\mu\) is the \(U(1)_Y\) hypercharge field,
+- \(W_\mu^i\) are the weak \(SU(2)_L\) fields,
+- \(G_\mu^a\) are the gluon fields of \(SU(3)_C\),
+- \(Y\), \(\tau^i\), and \(\lambda^a\) are the corresponding generators.
+
+The gauge-invariant kinetic Lagrangian reads:
+\[
+\mathcal{L}_{\text{gauge}} = -\frac{1}{4} \sum_a F^{a}_{\mu\nu} F^{a\,\mu\nu},
+\]
+with:
+\[
+F^a_{\mu\nu} = \partial_\mu A^a_\nu - \partial_\nu A^a_\mu + f^{abc} A^b_\mu A^c_\nu,
+\]
+where \(f^{abc}\) are the structure constants of the respective Lie algebras.
+
+The interaction term in the unified Lagrangian:
+\[
+\mathcal{L}_{\Theta, \text{int}} = \Re \left[ \bar{\Theta} i \Gamma^\mu \mathcal{D}_\mu \Theta \right],
+\]
+ensures that the dynamics of \(\Theta\) is fully coupled to the standard model gauge fields.
+
+:\section{Low-Energy Limits: Dirac and Schrödinger Equations}
+
+To demonstrate compatibility with established quantum mechanics, we derive the Dirac and Schrödinger equations as limiting cases of the unified biquaternionic field equation for \(\Theta(q)\).
+
+Starting from the unified covariant derivative:
+\[
+\mathcal{D}_A \Theta = \partial_A \Theta + \Omega_A \cdot \Theta + i g A_A^a T^a \Theta,
+\]
+we consider the case where curvature effects are small, gauge fields are static or slowly varying, and the manifold \(\mathbb{C}^5\) can be approximated by a local inertial frame. In this approximation, the equation of motion simplifies to:
+\[
+\Gamma^A \partial_A \Theta = m \Theta,
+\]
+which reduces to the **Dirac equation** in the limit where only 4 spacetime dimensions are active and \(\Gamma^A\) matrices correspond to standard Dirac matrices \(\gamma^\mu\). This confirms that the spinor nature of \(\Theta\) is consistent with relativistic quantum field theory.
+
+In the non-relativistic limit (\(v \ll c\)), a standard Foldy–Wouthuysen decomposition leads to the Schrödinger equation:
+\[
+i \hbar \frac{\partial \psi}{\partial t} = \left( -\frac{\hbar^2}{2m} \nabla^2 + V \right) \psi,
+\]
+where \(\psi\) is a projection of \(\Theta\) onto low-energy modes.
+
+Thus, our unified theory contains both quantum mechanics and relativistic field theory as natural limits, while offering a richer structure due to its biquaternionic and spin-tensor form defined on \(\mathbb{C}^5\).
+
+\section{Conscious Oscillations and Emergent Mind}
+
+Internal modes \( \chi(q) \sim \sin(\omega \cdot y^\mu) \) describe periodic subjective phase. Collapse of these oscillations projects classical reality. We interpret eigenmodes:
+\[
+\Theta_n(q) \sim e^{i n \psi} \Psi_n(x),
+\]
+as discrete conscious quanta (psychons), with transitions corresponding to awareness or memory shifts.
+
+
+\section{Gauge Symmetries: QED, QCD and the Standard Model Embedding}
+
+We extend the field \(\Theta(q)\) to carry internal gauge indices under the symmetry group \( \mathcal{G} = U(1) \times SU(2) \times SU(3) \), corresponding to the Standard Model gauge groups for electromagnetism, weak, and strong interactions.
+
+Let \(A_\mu = A_\mu^a T^a\) denote the full gauge connection, with generators \(T^a\) acting on \(\Theta(q)\) in the appropriate internal representation.
+
+The full covariant derivative becomes:
+\[
+\mathcal{D}_\mu \Theta = \partial_\mu \Theta + \Omega_\mu \cdot \Theta + i g_1 B_\mu Y \Theta + i g_2 W_\mu^i \tau^i \Theta + i g_3 G_\mu^a \lambda^a \Theta,
+\]
+where:
+\begin{itemize}
+  \item \(B_\mu\) is the \(U(1)_Y\) hypercharge field,
+  \item \(W_\mu^i\) are the weak \(SU(2)_L\) fields,
+  \item \(G_\mu^a\) are the gluon fields of \(SU(3)_C\),
+  \item \(Y\), \(\tau^i\), and \(\lambda^a\) are the corresponding generators.
+\end{itemize}
+
+The gauge-invariant kinetic Lagrangian reads:
+\[
+\mathcal{L}_{\text{gauge}} = -\frac{1}{4} \sum_a F^{a}_{\mu\nu} F^{a\,\mu\nu},
+\]
+with:
+\[
+F^a_{\mu\nu} = \partial_\mu A^a_\nu - \partial_\nu A^a_\mu + f^{abc} A^b_\mu A^c_\nu,
+\]
+where \(f^{abc}\) are the structure constants of the respective Lie algebras.
+
+The interaction term in the unified Lagrangian:
+\[
+\mathcal{L}_{\Theta, \text{int}} = \Re \left[ \bar{\Theta} i \Gamma^\mu \mathcal{D}_\mu \Theta \right],
+\]
+ensures that the dynamics of \(\Theta\) is fully coupled to the standard model gauge fields.
+
+
+\section{Free Energy Principle and Fokker–Planck Flow}
+
+We apply the FEP:
+\[
+\frac{\partial P}{\partial \psi} = -\nabla_q \cdot (D P) + \frac{1}{2} \nabla_q^2 (D^2 P),
+\]
+modeling informational entropy flow across \( \mathbb{B}^4 \). Drift terms represent prediction error; diffusion encodes uncertainty and updating.
+
+\section{Cosmological Aspects}
+
+The internal phase coordinate plays a role similar to an inflaton or entropy-gradient field. Toroidal compactification of internal directions leads to inflationary and cyclic cosmological models.
 
 \section{Conclusion}
-This extended article strengthens the mathematical basis of UBT, provides derivations of fundamental physical equations and constants, and connects to the Standard Model. It addresses prior critiques by embedding known physics within the biquaternionic and geometric framework.
 
+We have proposed a unified framework on \( \mathbb{B}^4 \) where geometry, gauge theory, quantum physics, and subjective consciousness are aspects of a single field \( \Theta(q) \). This approach explains both standard physics and phenomenological features of cognition, predicting new psychon-like excitations and quantum collapse via internal oscillations.
+
+
+\section{Quantum Electrodynamics and Quantum Chromodynamics}
+
+The field \( \Theta(q) \) contains internal symmetry structures corresponding to the gauge groups of the Standard Model. In particular, the internal gauge fiber \( \mathbb{G} \) carries representations of:
+\[
+\mathbb{G} \cong SU(3)_\text{color} \times SU(2)_L \times U(1)_Y,
+\]
+embedded within the matrix structure of \( \Theta \).
+
+\subsection{QED Sector}
+
+The Abelian part of the gauge group \( U(1) \) governs the electromagnetic interaction. The corresponding gauge field \( A_\mu \) enters the covariant derivative as:
+\[
+\mathcal{D}_\mu \Theta = \partial_\mu \Theta + \Omega_\mu \cdot \Theta + i e A_\mu \Theta,
+\]
+with Maxwell-type field strength:
+\[
+F_{\mu\nu} = \partial_\mu A_\nu - \partial_\nu A_\mu.
+\]
+
+\subsection{QCD Sector}
+
+The non-Abelian color interaction is embedded via the gluon fields \( G_\mu^a \), \( a=1,\dots,8 \), and SU(3) generators \( T^a \):
+\[
+\mathcal{D}_\mu \Theta = \cdots + i g_s G_\mu^a T^a \Theta.
+\]
+The gluonic field strength is:
+\[
+G_{\mu\nu}^a = \partial_\mu G_\nu^a - \partial_\nu G_\mu^a + g_s f^{abc} G_\mu^b G_\nu^c.
+\]
+
+\subsection{Symmetry Breaking and Higgs-Like Mechanism}
+
+The internal phase coordinates \( y^\mu, z^\mu \) provide a natural mechanism for spontaneous symmetry breaking:
+\[
+\langle \chi(q) \rangle \neq 0 \quad \Rightarrow \quad m \neq 0,
+\]
+where \( \chi \) acts as a Higgs-like internal mode within \( \Theta \). Mass hierarchies emerge from oscillatory patterns in the biquaternionic manifold.
+
+\section{Discussion of Particle Spectrum}
+
+Excitations of the field \( \Theta \) include not only standard fermions and bosons but also additional modes due to its internal spinor-gauge structure. We predict:
+
+\begin{itemize}
+  \item Standard particle spectrum (quarks, leptons, gauge bosons) as tensor-spinor projections,
+  \item Scalar internal oscillations as Higgs-like or axion-like particles,
+  \item Psychon modes — coherent phase oscillations corresponding to discrete conscious states,
+  \item Potential graviton-like curvature modes in the geometric component.
+\end{itemize}
+
+\section{Summary and Outlook}
+
+This framework combines geometry, quantum field theory, and information dynamics in a single elegant model defined on \( \mathbb{B}^4 \). It naturally unifies:
+
+\begin{itemize}
+  \item General relativity as geometric dynamics of \( G_{\mu\nu}(q) \),
+  \item Quantum field theory via tensor-spinor structure of \( \Theta(q) \),
+  \item Gauge interactions through internal fiber \( \mathbb{G} \),
+  \item Consciousness as internal oscillations and collapse of \( \chi(q) \).
+\end{itemize}
+
+Future work will explore quantization in curved biquaternionic space, phenomenology of psychon transitions, and links to holographic principles and modular topologies.
+
+\section{Limit: General Relativity}
+
+In the classical limit where oscillatory and imaginary components vanish, the biquaternionic metric \( G_{\mu\nu}(q) \) reduces to a standard pseudo-Riemannian real-valued tensor on a 4D Lorentzian manifold.
+
+Let \( \Re(G_{\mu\nu}) \rightarrow g_{\mu\nu}(x) \), where \( x^\mu \in \mathbb{R}^4 \) are spacetime coordinates. The resulting Levi-Civita connection \( \Gamma^\lambda_{\mu\nu} \), Ricci tensor \( R_{\mu\nu} \), and scalar curvature \( R \) are defined in the usual way via the metric compatibility and torsion-free condition.
+
+From the action:
+\[
+S_\text{geom} = \int d^4 x \, \sqrt{-g} \, \frac{1}{2\kappa} R,
+\]
+we obtain Einstein’s equations:
+\[
+R_{\mu\nu} - \frac{1}{2} g_{\mu\nu} R = 8 \pi G \, T_{\mu\nu},
+\]
+as the low-energy limit of the unified biquaternionic dynamics. Thus, general relativity is fully embedded in the geometric projection of our theory.
+
+
+\section{Free Energy Principle, Drift, and Metacognitive Field}
+
+The internal dynamics of \( \chi(q) \), representing subjective or conscious phase, follow a stochastic evolution modulated by environmental prediction.
+
+We introduce a Fokker–Planck-like evolution equation:
+\[
+\frac{\partial \rho(\chi, t)}{\partial t} = -\nabla \cdot \left( \mu \rho \right) + D \nabla^2 \rho,
+\]
+where \( \rho \) is the probability distribution over conscious phase modes, \( \mu \) is the drift induced by minimization of variational free energy \( F[q] \), and \( D \) is the diffusion tensor.
+
+The **metakas** is then defined as the evolving state of this internal probability structure over \( \mathbb{B}^4 \), including memory, attention, and perception gradients.
+
+The drift term reflects predictive coding:
+\[
+\mu = -\nabla \log P_\text{sensory} + \nabla \log \rho,
+\]
+corresponding to active inference. Cognitive dynamics are thus described by stochastic partial differential equations over the internal degrees of freedom of \( \Theta \), with attractor-like behavior for stable conscious trajectories.
 \end{document}
