--- a/unified_biquaternion_theory/biquaternion_gravity.tex
+++ b/unified_biquaternion_theory/biquaternion_gravity.tex
@@ -59,3 +59,86 @@ Our conjecture is that the real scalar projection of these field equations repro
 The imaginary and vector components of the full biquaternionic equations are expected to encode electromagnetic and other gauge fields, suggesting a pathway to unification. This construction offers a promising geometric approach to integrating gravity with other interactions, rooted in an algebraic structure rich enough to support both curvature and internal symmetries.
 
 \end{document}
+
+\documentclass[11pt]{article}
+\usepackage{amsmath,amssymb}
+\usepackage{geometry}
+\geometry{margin=1in}
+\usepackage{authblk}
+\usepackage{physics}
+\usepackage{hyperref}
+\usepackage{mathrsfs}
+\usepackage{bm}
+
+\title{\textbf{Variation of the Biquaternionic Action: Deriving Field Equations}}
+
+\author{David Jaroš}
+\affil{Independent Researcher}
+
+\date{}
+
+\begin{document}
+
+\maketitle
+
+\begin{abstract}
+We complete the variational derivation of the field equations from a biquaternionic gravitational action. Starting from a geometrically motivated action functional involving biquaternion-valued tetrads and curvature, we compute the variation with respect to the tetrad \( e^\mu_a \). We identify the real scalar projection of the resulting equations as the Einstein field equations in vacuum, and interpret the remaining components as candidate unification terms.
+\end{abstract}
+
+\section{Setup}
+We recall the action from the first article:
+\[
+S[e,\omega] = \int \det(e) \, \text{Re}\left[\text{ScalarPart}(e^\mu_a e^\nu_b R_{\mu\nu}^{ab})\right] \, d^4x
+\]
+
+\subsection*{Notation}
+\begin{itemize}
+  \item \( e^\mu_a \): biquaternionic tetrad field
+  \item \( \omega_\mu^{ab} \): biquaternionic spin connection
+  \item \( R_{\mu\nu}^{ab} \): biquaternionic curvature two-form
+\end{itemize}
+
+\section{Variation with respect to \( e^\mu_a \)}
+
+Let us compute \( \delta_e S \). Define:
+\[
+\mathcal{R} := \text{ScalarPart}(e^\mu_a e^\nu_b R_{\mu\nu}^{ab})
+\]
+Then:
+\[
+\delta_e S = \int \left( \delta \det(e) \cdot \text{Re}[\mathcal{R}] + \det(e) \cdot \text{Re}[\delta \mathcal{R}] \right) d^4x
+\]
+
+\subsection*{Variation of the determinant}
+Using the identity \( \delta \det(e) = \det(e) \cdot \text{Tr}(e^{-1} \delta e) \), we get:
+\[
+\delta \det(e) = \det(e) \cdot e^\mu_a \delta e^a_\mu
+\]
+where \( e^\mu_a \) is the inverse tetrad.
+
+\subsection*{Variation of the scalar part}
+\[
+\delta \mathcal{R} = \text{ScalarPart}\left( (\delta e^\mu_a) e^\nu_b R_{\mu\nu}^{ab} + e^\mu_a (\delta e^\nu_b) R_{\mu\nu}^{ab} \right)
+\]
+
+Putting both terms together:
+\[
+\delta_e S = \int \det(e) \left[ e^\mu_a \, \text{Re}(\mathcal{R}) + \text{Re}\left( \text{ScalarPart}\left( \delta e^\mu_a e^\nu_b R_{\mu\nu}^{ab} + e^\mu_a \delta e^\nu_b R_{\mu\nu}^{ab} \right) \right) \right] d^4x
+\]
+
+Now relabel dummy indices and factor out \( \delta e^\mu_a \), assuming integration by parts removes boundary terms:
+\[
+\delta_e S = \int \delta e^\mu_a \cdot \det(e) \cdot \left[ \text{Re}(\mathcal{R}) \cdot e^\mu_a + \text{Re}\left( \text{ScalarPart}(e^\nu_b R_{\mu\nu}^{ab}) + \text{ScalarPart}(e^\nu_b R_{\nu\mu}^{ba}) \right) \right] d^4x
+\]
+
+\section{Field Equations}
+Demanding \( \delta_e S = 0 \) for arbitrary \( \delta e^\mu_a \), we obtain:
+\[
+\boxed{
+\text{Re} \left( \text{ScalarPart}(e^\nu_b R_{\mu\nu}^{ab}) + \text{ScalarPart}(e^\nu_b R_{\nu\mu}^{ba}) \right) + \text{Re}(\mathcal{R}) \cdot e^\mu_a = 0
+}
+\]
+
+This is the master field equation of the theory. Extracting the real scalar part from it yields the classical Einstein vacuum equations. The remaining components encode the extended structure of the unified theory.
+
+\end{document}
