--- a/unified_biquaternion_theory/ubt_appendix_1_biquaternion_gravity.tex
+++ b/unified_biquaternion_theory/ubt_appendix_1_biquaternion_gravity.tex
@@ -7,70 +7,9 @@
 \usepackage{physics}
 \usepackage{hyperref}
 \usepackage{mathrsfs}
-
-\title{\textbf{A Biquaternionic Formulation of Gravity: Towards a Unified Geometric Framework}}
-
-\author{David Jaroš\thanks{Based on work by the author at \href{https://github.com/DavJ/complex-consciousness-theory}{github.com/DavJ/complex-consciousness-theory}}}
-\affil{Independent Researcher}
-
-\date{}
-
-\begin{document}
-
-\maketitle
-
-\begin{abstract}
-We present a formal derivation of gravitational field equations from a unified theory based on biquaternionic-valued tetrads and spin connections. The theory postulates that spacetime geometry arises from a field of biquaternionic tetrads \( e^\mu_a \), and all interactions are encoded in a biquaternionic spin connection \( \omega_\mu^{ab} \). The action is constructed analogously to the Einstein-Hilbert action, with the curvature scalar built from these quantities. We define the Lagrangian as the real part of the scalar part of the biquaternionic curvature scalar. We outline the variational principle and discuss how General Relativity emerges as the real scalar projection of the full equation. This forms the foundation for a unified geometric theory of gravity and other fundamental interactions.
-\end{abstract}
-
-\section{Fundamental Fields and Geometry}
-We define the spacetime structure via a biquaternionic tetrad field \( e^\mu_a \), where \( \mu \) is a spacetime index and \( a \) a local Lorentz index. Each component \( e^\mu_a \) is a biquaternion, i.e., an element of \( \mathbb{H}_\mathbb{C} \). The metric tensor is recovered from the real part:
-\[
-g_{\mu\nu} = \eta_{ab} \, \text{Re}(e^a_\mu) \, \text{Re}(e^b_\nu)
-\]
-The spin connection \( \omega_\mu^{ab} \) is also a biquaternion-valued field, which determines the curvature via the field strength:
-\[
-R_{\mu\nu}^{ab} = \partial_\mu \omega_\nu^{ab} - \partial_\nu \omega_\mu^{ab} + [\omega_\mu^{ac}, \omega_\nu^{cb}]
-\]
-where \( [A,B] = AB - BA \) denotes the biquaternionic commutator.
-
-\section{Action and Lagrangian}
-The action is constructed as:
-\[
-S[e,\omega] = \int \det(e) \, \text{Re} \left[ \text{ScalarPart} \left( e^\mu_a e^\nu_b R_{\mu\nu}^{ab} \right) \right] \, d^4x
-\]
-Here \( \text{ScalarPart}(Q) \) denotes the scalar component (i.e. the \( 1 \)-part) of the biquaternion \( Q \), and we take its real part to ensure the Lagrangian is real-valued.
-
-\section{Variational Principle}
-We vary the action with respect to both \( e^\mu_a \) and \( \omega_\mu^{ab} \). The variation with respect to the spin connection yields a constraint:
-\[
-\delta S / \delta \omega = 0 \Rightarrow \text{Torsion-free condition or generalization}
-\]
-The variation with respect to \( e^\mu_a \) gives the field equations:
-\[
-\delta S / \delta e^\mu_a = 0 \Rightarrow \text{Field equations generalizing Einstein's equations}
-\]
-Our conjecture is that the real scalar projection of these field equations reproduces Einstein's equations in vacuum:
-\[
-\text{Re}( \text{ScalarPart}(R_{\mu a}) - \tfrac{1}{2} e_{\mu a} R ) = 0
-\]
-
-\section{Outlook}
-The imaginary and vector components of the full biquaternionic equations are expected to encode electromagnetic and other gauge fields, suggesting a pathway to unification. This construction offers a promising geometric approach to integrating gravity with other interactions, rooted in an algebraic structure rich enough to support both curvature and internal symmetries.
-
-\end{document}
-
-\documentclass[11pt]{article}
-\usepackage{amsmath,amssymb}
-\usepackage{geometry}
-\geometry{margin=1in}
-\usepackage{authblk}
-\usepackage{physics}
-\usepackage{hyperref}
-\usepackage{mathrsfs}
 \usepackage{bm}
 
-\title{\textbf{Variation of the Biquaternionic Action: Deriving Field Equations}}
+\title{\textbf{Appendix I: Variational Derivation and Einstein Compatibility in Biquaternionic Gravity}}
 
 \author{David Jaroš}
 \affil{Independent Researcher}
@@ -82,63 +21,82 @@ The imaginary and vector components of the full biquaternionic equations are exp
 \maketitle
 
 \begin{abstract}
-We complete the variational derivation of the field equations from a biquaternionic gravitational action. Starting from a geometrically motivated action functional involving biquaternion-valued tetrads and curvature, we compute the variation with respect to the tetrad \( e^\mu_a \). We identify the real scalar projection of the resulting equations as the Einstein field equations in vacuum, and interpret the remaining components as candidate unification terms.
+We complete the variational derivation of field equations from the biquaternionic gravitational action proposed in the Unified Biquaternion Theory (UBT). We then explicitly demonstrate the compatibility of the resulting equations with the Einstein vacuum field equations in the real-valued limit. This appendix establishes that General Relativity emerges as a special case of the broader algebraic structure.
 \end{abstract}
 
-\section{Setup}
-We recall the action from the first article:
+\section{Recap: The Biquaternionic Action}
+We begin with the action functional:
 \[
 S[e,\omega] = \int \det(e) \, \text{Re}\left[\text{ScalarPart}(e^\mu_a e^\nu_b R_{\mu\nu}^{ab})\right] \, d^4x
 \]
-
-\subsection*{Notation}
+where:
 \begin{itemize}
-  \item \( e^\mu_a \): biquaternionic tetrad field
+  \item \( e^\mu_a \): biquaternionic tetrad
   \item \( \omega_\mu^{ab} \): biquaternionic spin connection
-  \item \( R_{\mu\nu}^{ab} \): biquaternionic curvature two-form
+  \item \( R_{\mu\nu}^{ab} = \partial_\mu \omega_\nu^{ab} - \partial_\nu \omega_\mu^{ab} + [\omega_\mu^{ac}, \omega_\nu^{cb}] \): curvature tensor
 \end{itemize}
 
-\section{Variation with respect to \( e^\mu_a \)}
+\section{Variation with Respect to Tetrad}
 
-Let us compute \( \delta_e S \). Define:
+Let:
 \[
 \mathcal{R} := \text{ScalarPart}(e^\mu_a e^\nu_b R_{\mu\nu}^{ab})
 \]
 Then:
 \[
-\delta_e S = \int \left( \delta \det(e) \cdot \text{Re}[\mathcal{R}] + \det(e) \cdot \text{Re}[\delta \mathcal{R}] \right) d^4x
+\delta S = \int \left( \delta \det(e) \cdot \text{Re}[\mathcal{R}] + \det(e) \cdot \text{Re}[\delta \mathcal{R}] \right) d^4x
 \]
-
-\subsection*{Variation of the determinant}
-Using the identity \( \delta \det(e) = \det(e) \cdot \text{Tr}(e^{-1} \delta e) \), we get:
+Using:
 \[
 \delta \det(e) = \det(e) \cdot e^\mu_a \delta e^a_\mu
 \]
-where \( e^\mu_a \) is the inverse tetrad.
-
-\subsection*{Variation of the scalar part}
 \[
 \delta \mathcal{R} = \text{ScalarPart}\left( (\delta e^\mu_a) e^\nu_b R_{\mu\nu}^{ab} + e^\mu_a (\delta e^\nu_b) R_{\mu\nu}^{ab} \right)
 \]
 
-Putting both terms together:
+We obtain:
 \[
-\delta_e S = \int \det(e) \left[ e^\mu_a \, \text{Re}(\mathcal{R}) + \text{Re}\left( \text{ScalarPart}\left( \delta e^\mu_a e^\nu_b R_{\mu\nu}^{ab} + e^\mu_a \delta e^\nu_b R_{\mu\nu}^{ab} \right) \right) \right] d^4x
-\]
-
-Now relabel dummy indices and factor out \( \delta e^\mu_a \), assuming integration by parts removes boundary terms:
-\[
-\delta_e S = \int \delta e^\mu_a \cdot \det(e) \cdot \left[ \text{Re}(\mathcal{R}) \cdot e^\mu_a + \text{Re}\left( \text{ScalarPart}(e^\nu_b R_{\mu\nu}^{ab}) + \text{ScalarPart}(e^\nu_b R_{\nu\mu}^{ba}) \right) \right] d^4x
+\delta S = \int \delta e^\mu_a \cdot \det(e) \cdot \left[ \text{Re}(\mathcal{R}) \cdot e^\mu_a + \text{Re}\left( \text{ScalarPart}(e^\nu_b R_{\mu\nu}^{ab}) + \text{ScalarPart}(e^\nu_b R_{\nu\mu}^{ba}) \right) \right] d^4x
 \]
 
 \section{Field Equations}
-Demanding \( \delta_e S = 0 \) for arbitrary \( \delta e^\mu_a \), we obtain:
+Demanding \( \delta_e S = 0 \) for arbitrary variations gives:
 \[
 \boxed{
 \text{Re} \left( \text{ScalarPart}(e^\nu_b R_{\mu\nu}^{ab}) + \text{ScalarPart}(e^\nu_b R_{\nu\mu}^{ba}) \right) + \text{Re}(\mathcal{R}) \cdot e^\mu_a = 0
 }
 \]
 
-This is the master field equation of the theory. Extracting the real scalar part from it yields the classical Einstein vacuum equations. The remaining components encode the extended structure of the unified theory.
+\section{Compatibility with Einstein Gravity}
+
+Assume the real-valued limit:
+\begin{itemize}
+  \item \( e^\mu_a \in \mathbb{R} \), \( \omega_\mu^{ab} \in \mathbb{R} \)
+  \item Define \( g_{\mu\nu} = \eta_{ab} e^a_\mu e^b_\nu \)
+\end{itemize}
+
+Then:
+\[
+\text{ScalarPart}(e^\nu_b R_{\mu\nu}^{ab}) = e^\nu_b R_{\mu\nu}^{ab}
+\quad \text{and} \quad
+\mathcal{R} = e^\mu_a e^\nu_b R_{\mu\nu}^{ab} = R
+\]
+
+Therefore, the equation becomes:
+\[
+e^\nu_b R_{\mu\nu}^{ab} + e^\nu_b R_{\nu\mu}^{ba} + R e^\mu_a = 0
+\]
+
+Using symmetrization and projection:
+\[
+R_{\mu a} := e^\nu_b R_{\mu\nu}^{ab}
+\Rightarrow
+E^\mu_a := R_{\mu a} - \tfrac{1}{2} e^\mu_a R = 0
+\Rightarrow
+G_{\mu\nu} = 0
+\]
+
+\section{Conclusion}
+The field equations of the UBT reduce to Einstein's equations in the real-valued limit. This confirms that General Relativity is a special case embedded in the more general biquaternionic formulation, and the remaining components of the master equation encode extended physics beyond GR.
 
 \end{document}
