--- a/unified_biquaternion_theory/ubt_appendix_1_biquaternion_gravity.tex
+++ b/unified_biquaternion_theory/ubt_appendix_1_biquaternion_gravity.tex
@@ -280,3 +280,38 @@ G_{\mu a} = R_{\mu a} - \frac{1}{2} e_{\mu a} R = 0
 \subsection*{3. Conclusion}
 
 We have rigorously shown that the real-valued limit of our derived field equation reproduces the vacuum Einstein equations. This validates the classical correspondence of our biquaternionic gravitational theory with General Relativity.
+\section{Outlook: Imaginary Scalar Equation}
+
+In the previous sections, we showed that the real scalar part of our field equation,
+\[
+\text{Re}\left[\text{Scal}\left(R^\mu_a - \frac{1}{2} e^\mu_a R\right)\right] = 0,
+\]
+reduces to the Einstein field equations in the vacuum when taking the real limit of all variables.
+
+We now turn our attention to the next logical component in the structure of the biquaternion-valued field equation:
+\[
+\text{Im}\left[\text{Scal}\left(R^\mu_a - \frac{1}{2} e^\mu_a R\right)\right] = 0.
+\]
+
+This expression corresponds to the imaginary part of the scalar projection of our fundamental field equation. Its interpretation may reveal a new scalar degree of freedom in the theory, one that is not present in General Relativity.
+
+\subsection{Possible Interpretations}
+
+There are several possible scenarios for this component:
+
+\begin{enumerate}
+    \item \textbf{New scalar field:} The equation could correspond to a dynamical equation for an additional scalar field $\phi$, perhaps satisfying an equation of motion like $\Box \phi = V'(\phi)$.
+    \item \textbf{Geometric constraint:} The imaginary scalar part might be identically zero under the symmetry of the connection or metric, effectively acting as a constraint on allowed solutions.
+    \item \textbf{Quantum or informational content:} In connection with complex time or entropy flow, this term could relate to non-classical aspects of geometry, such as time-asymmetry or decoherence.
+\end{enumerate}
+
+\subsection{Next Steps}
+
+To fully understand this component, we propose to:
+\begin{itemize}
+    \item Compute the explicit form of $\text{Im}[\text{Scal}[\cdots]]$ in terms of the tetrad $e^\mu_a$ and connection $\omega^{ab}_\mu$.
+    \item Determine whether this component vanishes identically, or yields a nontrivial equation for an additional scalar field.
+    \item Explore its coupling to other components (e.g. vector parts) of the biquaternionic field equation.
+\end{itemize}
+
+This analysis will be the subject of Appendix 2.
