--- a/unified_biquaternion_theory/solution_P4_fine_structure_constant/symbolic_derivation_fine_structure_constant.tex
+++ b/unified_biquaternion_theory/solution_P4_fine_structure_constant/symbolic_derivation_fine_structure_constant.tex
@@ -1,27 +1,20 @@
 \documentclass{article}
 \usepackage{amsmath}
-\title{Symbolické odvození jemné struktury}
 \begin{document}
-\maketitle
 
-\section*{Shrnutí}
-Odvozujeme hodnotu jemné struktury $\alpha = \frac{e^2}{\hbar c}$ na základě vztahů mezi parametry bikvaternionového pole $\Theta$ a jeho vnitřními módy.
+\section*{Symbolic Derivation of the Fine-Structure Constant}
 
-\section*{Základní vztahy}
-Z teorie máme:
+We hypothesize that the fine-structure constant $\alpha$ arises from the ratio of two fundamental frequencies:
 \[
-\Theta(q, \tau) = \rho(q, \tau) e^{i \phi(q, \tau)}
+\alpha \approx \frac{\omega_q}{\omega_\Theta}
 \]
-kde fáze $\phi$ odpovídá vnitřní rotaci (spin) a interakčním efektům. Pole nese vnitřní frekvenci $\omega_\Theta$ analogickou k $mc^2/\hbar$.
+Where $\omega_q$ is the coupling frequency of the electron field with the electromagnetic field and $\omega_\Theta$ is the intrinsic oscillation frequency of the underlying $\Theta$ field.
 
-\section*{Odvození}
-Z dimenzionální analýzy a energetické rovnosti pole a jeho elektromagnetické interakce odvodíme:
+This derivation will aim to connect $\alpha$ with expressions derived from the Lagrangian of the Unified Biquaternion Theory (UBT), using:
 \[
-\alpha = \frac{e^2}{\hbar c} \approx \frac{\omega_q}{\omega_\Theta}
+\alpha = \frac{e^2}{4\pi \varepsilon_0 \hbar c}
 \]
-kde $\omega_q$ je frekvence elektromagnetické vazby (součet fázových posunů napříč topologií toru).
 
-\section*{Závěr}
-Výraz pro $\alpha$ je přirozeným důsledkem geometrie a vlastností vnitřních módů pole $\Theta$.
+Future steps include extracting $e$ from the interaction terms in the UBT Lagrangian.
 
 \end{document}
