--- a/unified_biquaternion_theory/priority_P5_dark_matter/dark_matter_research_proposal.tex
+++ b/unified_biquaternion_theory/priority_P5_dark_matter/dark_matter_research_proposal.tex
@@ -1,9 +1,9 @@
-
+% dark_matter_research_proposal.tex
 \documentclass[12pt]{article}
 \usepackage{amsmath,amssymb,geometry}
 \geometry{margin=1in}
-\title{Research Proposal: Topological Origin of Dark Matter in UBT}
-\author{Unified Biquaternion Theory Initiative}
+\title{Research Proposal: Geometric and Topological Foundations of Dark Matter in Unified Biquaternion Theory}
+\author{Unified Biquaternion Theory Project}
 \date{\today}
 
 \begin{document}
@@ -11,26 +11,26 @@
 \maketitle
 
 \section*{Motivation}
-The nature of dark matter remains one of the most profound mysteries in modern physics. Despite extensive searches, no direct detection of dark matter particles has been confirmed. This motivates alternative explanations rooted in geometry and topology of the fundamental fields.
+The existence of dark matter is one of the most compelling puzzles in modern cosmology and particle physics. Despite overwhelming astrophysical evidence, its composition and origin remain unknown. Traditional approaches often invoke hypothetical particles such as WIMPs or axions, yet decades of experimental searches have yielded no direct detection.
 
-\section*{Hypothesis}
-We propose that dark matter arises from topologically nontrivial, electromagnetically neutral configurations of the unified field \( \Theta(q, \tau) \) defined on the complexified spacetime \( \mathbb{C}^4 \). These configurations should:
+Unified Biquaternion Theory (UBT), formulated in complexified spacetime \( \mathbb{C}^4 \), offers a novel perspective. It provides a rich field structure \( \Theta(q, \tau) \) with inherent topological and geometric features capable of encoding gravitational but electromagnetically neutral configurations. These configurations, if stable and energetic, can manifest as dark matter without requiring physics beyond the standard model particle content.
+
+\section*{Research Objective}
+We propose to investigate whether stable topological solutions of the unified field \( \Theta(q, \tau) \), referred to as \emph{dark modes}, can account for the dark matter content of the universe. Specifically, we aim to:
 
 \begin{itemize}
-  \item Possess gravitational mass-energy,
-  \item Be stable due to topological protection,
-  \item Not interact electromagnetically with visible matter.
+  \item Construct theoretical solutions \( \Theta_D \) with vanishing electromagnetic coupling but nonzero stress-energy.
+  \item Classify their topological invariants (e.g., Hopf charge, winding numbers).
+  \item Evaluate their stability and energy profiles.
+  \item Simulate their distribution and verify consistency with astrophysical observations (e.g., galactic rotation curves, lensing, structure formation).
 \end{itemize}
 
-\section*{Research Goals}
-\begin{enumerate}
-  \item Identify classes of topologically stable field configurations in UBT,
-  \item Analyze their energy-momentum contributions to the Einstein field equations,
-  \item Compare the resulting mass-energy distribution with observed dark matter effects,
-  \item Investigate implications for early universe structure formation.
-\end{enumerate}
-
-\section*{Expected Outcomes}
-A successful theoretical derivation of dark matter effects from geometric field structures would provide a particle-free explanation consistent with observations. This may also bridge dark matter and dark energy within a unified topological framework.
+\section*{Expected Impact}
+If successful, this work would:
+\begin{itemize}
+  \item Eliminate the need for new fundamental particles to explain dark matter,
+  \item Unify gravitational and dark sector phenomena under a single geometric framework,
+  \item Predict observational signatures tied to the topology of spacetime rather than particle interactions.
+\end{itemize}
 
 \end{document}
