--- a/unified_biquaternion_theory/priority_P5_dark_matter/dark_matter_research_proposal.tex
+++ b/unified_biquaternion_theory/priority_P5_dark_matter/dark_matter_research_proposal.tex
@@ -1,36 +1,5 @@
-% dark_matter_research_proposal.tex
-\documentclass[12pt]{article}
-\usepackage{amsmath,amssymb,geometry}
-\geometry{margin=1in}
-\title{Research Proposal: Geometric and Topological Foundations of Dark Matter in Unified Biquaternion Theory}
-\author{Unified Biquaternion Theory Project}
-\date{\today}
-
+%% LaTeX content of research proposal
+\documentclass{article}
 \begin{document}
-
-\maketitle
-
-\section*{Motivation}
-The existence of dark matter is one of the most compelling puzzles in modern cosmology and particle physics. Despite overwhelming astrophysical evidence, its composition and origin remain unknown. Traditional approaches often invoke hypothetical particles such as WIMPs or axions, yet decades of experimental searches have yielded no direct detection.
-
-Unified Biquaternion Theory (UBT), formulated in complexified spacetime \( \mathbb{C}^4 \), offers a novel perspective. It provides a rich field structure \( \Theta(q, \tau) \) with inherent topological and geometric features capable of encoding gravitational but electromagnetically neutral configurations. These configurations, if stable and energetic, can manifest as dark matter without requiring physics beyond the standard model particle content.
-
-\section*{Research Objective}
-We propose to investigate whether stable topological solutions of the unified field \( \Theta(q, \tau) \), referred to as \emph{dark modes}, can account for the dark matter content of the universe. Specifically, we aim to:
-
-\begin{itemize}
-  \item Construct theoretical solutions \( \Theta_D \) with vanishing electromagnetic coupling but nonzero stress-energy.
-  \item Classify their topological invariants (e.g., Hopf charge, winding numbers).
-  \item Evaluate their stability and energy profiles.
-  \item Simulate their distribution and verify consistency with astrophysical observations (e.g., galactic rotation curves, lensing, structure formation).
-\end{itemize}
-
-\section*{Expected Impact}
-If successful, this work would:
-\begin{itemize}
-  \item Eliminate the need for new fundamental particles to explain dark matter,
-  \item Unify gravitational and dark sector phenomena under a single geometric framework,
-  \item Predict observational signatures tied to the topology of spacetime rather than particle interactions.
-\end{itemize}
-
+Research proposal on dark matter using Theta_D Hopfion.
 \end{document}
